@startuml
title Bendruomenės įrašų klasių modelis
left to right direction
skinparam packageStyle rectangle

package "Sąsajos / Views" {
  class CommunityPage <<boundary>> {
    +handleCreatePost(event)
  }
}

package "Valdikliai / Controllers" {
  class CommunityController <<control>> {
    +index(request, service)
    +plotFeed(request, plot, service)
    +store(request, service)
    +update(request, post, service)
    +destroy(request, post, service)
  }
}

package "Užklausos / Requests" {
  class StoreCommunityPostRequest <<request>> {
    +authorize()
    +rules()
  }
  class UpdateCommunityPostRequest <<request>> {
    +authorize()
    +rules()
  }
}

package "Ištekliai / Resources" {
  class CommunityPostResource <<resource>> {
    +toArray(request)
  }
}

package "Paslaugos / Services" {
  class CommunityService <<service>> {
    +listPublicFeed()
    +listFeed(owner)
    +listByPlot(owner, plot)
    +createPost(owner, profile, data)
    +updatePost(owner, post, data)
    +deletePost(owner, post)
  }
  class AccessService <<service>> {
    +accessiblePlotIds(owner)
    +userHasAccess(owner, plot)
  }
}

package "Esybės / Models" {
  class CommunityPost <<entity>> {
    +garden_owner_id
    +plot_id
    +name
    +text
    +share
    +created_at
    +fk_owner_id
    +fk_profile_id
    +fk_plot_id
    +owner()
    +profile()
    +plot()
  }
  class GardenOwner <<entity>> {
    +id
    +id_user
    +fk_profile_id
    +profile()
    +communityPosts()
  }
  class Profile <<entity>> {
    +name
    +surname
    +communityPosts()
  }
  class Plot <<entity>> {
    +name
    +share
    +geometry
    +plantZones()
    +communityPosts()
  }
  class PlantZone <<entity>> {
    +name
    +geometry
  }
}

CommunityPage ..> CommunityController : list/create feed
CommunityController ..> StoreCommunityPostRequest : validates create
CommunityController ..> UpdateCommunityPostRequest : validates update
CommunityController ..> CommunityService : delegates
CommunityController ..> CommunityPostResource : returns
CommunityService ..> AccessService : plot visibility
CommunityService ..> CommunityPost : CRUD
CommunityService ..> Plot : links/read shared geometry
CommunityService ..> GardenOwner : author
CommunityService ..> Profile : author profile

GardenOwner "1" -- "0..*" CommunityPost : authors
Profile "1" -- "0..*" CommunityPost : profile
Plot "0..1" -- "0..*" CommunityPost : referenced by
Plot "1" -- "0..*" PlantZone : preview zones

@enduml
